@@ -1,7 +1,5 @@
 name = Chrome-Policy
 author = Elvin Aslanov <rwp.primary@gmail.com>
 license = Perl_5
-copyright_holder = Elvin Aslanov
-copyright_year = 2023
 
 [@RWP]
