@@ -4,6 +4,9 @@ This is a changelog file in addition to git commit messages.
 
 {{$NEXT}}
 
+  - Add CONTRIBUTING file
+  - Document the set_strict_policy method
+
 0.230360  2023-02-05 04:50:40+04:00 Asia/Baku
 
   * Add GetOpt::Long::Parser OO option parsing
